@@ -10,6 +10,9 @@ debsig-verify (0.11) UNRELEASED; urgency=low
     Thanks to Michael Vogt <mvo@ubuntu.com>. Closes: #758525
   * Add new --policies-dir and --keyrings-dir options.
   * Add new --help option.
+  * Do not print --version and --help on stderr and make them exit 0. And
+    replace usage error output with a new function that gives a hint to the
+    user to use --help instead.
 
  -- Guillem Jover <guillem@debian.org>  Tue, 19 Aug 2014 10:39:31 +0200
 
